# Built with some examples from the PyScaffold default setup.cfg.
[metadata]
name = truss
version = attr: truss.version
url = https://github.com/sneakypanda/truss
description = A script to help with fiddling with things.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
author = Coenie Pretorius
author_email = coeniep@miscusi.co.za
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    docopt

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    truss = truss.cli:main

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
